--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.1
 altair==5.3.0
 annotated-types==0.6.0
 anyio==4.3.0
+arxiv==2.1.0
 asgiref==3.8.1
 asttokens==2.4.1
 attrs==23.2.0
@@ -30,6 +31,7 @@ distro==1.9.0
 executing==2.0.1
 faiss-cpu==1.8.0
 fastapi==0.110.2
+feedparser==6.0.10
 filelock==3.13.4
 flatbuffers==24.3.25
 frozenlist==1.4.1
@@ -39,6 +41,7 @@ GitPython==3.1.43
 google-auth==2.29.0
 googleapis-common-protos==1.63.0
 greenlet==3.0.3
+groq==0.5.0
 grpcio==1.62.2
 h11==0.14.0
 httpcore==1.0.5
@@ -63,8 +66,10 @@ kubernetes==29.0.0
 langchain==0.1.16
 langchain-community==0.0.34
 langchain-core==0.1.46
+langchain-groq==0.1.3
 langchain-openai==0.1.3
 langchain-text-splitters==0.0.1
+langchainhub==0.1.15
 langserve==0.1.1
 langsmith==0.1.51
 markdown-it-py==3.0.0
@@ -128,6 +133,7 @@ requests-oauthlib==2.0.0
 rich==13.7.1
 rpds-py==0.18.0
 rsa==4.9
+sgmllib3k==1.0.0
 shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
@@ -148,6 +154,7 @@ tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.3
 typer==0.12.3
+types-requests==2.31.0.20240406
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 tzdata==2024.1
@@ -158,6 +165,7 @@ watchfiles==0.21.0
 wcwidth==0.2.13
 websocket-client==1.8.0
 websockets==12.0
+wikipedia==1.4.0
 wrapt==1.16.0
 yarl==1.9.4
 zipp==3.18.1
